config_dump_after.json
{
 "configs": [
  {
   "@type": "type.googleapis.com/envoy.admin.v3.BootstrapConfigDump",
   "bootstrap": {
    "node": {
     "id": "default-node",
     "cluster": "edge",
     "locality": {
      "region": "default-region",
      "zone": "default-zone"
     },
     "hidden_envoy_deprecated_build_version": "a8507f67225cdd912712971bf72d41f219eb74ed/1.13.3/Modified/DEBUG/BoringSSL",
     "user_agent_name": "envoy",
     "user_agent_build_version": {
      "version": {
       "major_number": 1,
       "minor_number": 13,
       "patch": 3
      },
      "metadata": {
       "revision.status": "Modified",
       "revision.sha": "a8507f67225cdd912712971bf72d41f219eb74ed",
       "build.type": "DEBUG",
       "ssl.version": "BoringSSL"
      }
     },
     "extensions": [
      {
       "name": "envoy.dynamic.ot",
       "category": "envoy.tracers"
      },
      {
       "name": "envoy.lightstep",
       "category": "envoy.tracers"
      },
      {
       "name": "envoy.tracers.datadog",
       "category": "envoy.tracers"
      },
      {
       "name": "envoy.tracers.opencensus",
       "category": "envoy.tracers"
      },
      {
       "name": "envoy.tracers.xray",
       "category": "envoy.tracers"
      },
      {
       "name": "envoy.zipkin",
       "category": "envoy.tracers"
      },
      {
       "name": "dubbo",
       "category": "envoy.dubbo_proxy.protocols"
      },
      {
       "name": "envoy.filters.thrift.rate_limit",
       "category": "envoy.thrift_proxy.filters"
      },
      {
       "name": "envoy.filters.thrift.router",
       "category": "envoy.thrift_proxy.filters"
      },
      {
       "name": "dubbo.hessian2",
       "category": "envoy.dubbo_proxy.serializers"
      },
      {
       "name": "envoy.grpc_credentials.aws_iam",
       "category": "envoy.grpc_credentials"
      },
      {
       "name": "envoy.grpc_credentials.default",
       "category": "envoy.grpc_credentials"
      },
      {
       "name": "envoy.grpc_credentials.file_based_metadata",
       "category": "envoy.grpc_credentials"
      },
      {
       "name": "envoy.buffer",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.cors",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.csrf",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.ext_authz",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.fault",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.adaptive_concurrency",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.dynamic_forward_proxy",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.grpc_http1_reverse_bridge",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.grpc_stats",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.header_to_metadata",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.jwt_authn",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.on_demand",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.original_src",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.rbac",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.filters.http.tap",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.grpc_http1_bridge",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.grpc_json_transcoder",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.grpc_web",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.gzip",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.health_check",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.http_dynamo_filter",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.ip_tagging",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.lua",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.rate_limit",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.router",
       "category": "envoy.filters.http"
      },
      {
       "name": "envoy.squash",
       "category": "envoy.filters.http"
      },
      {
       "name": "gm.acl",
       "category": "envoy.filters.http"
      },
      {
       "name": "gm.ensure-variables",
       "category": "envoy.filters.http"
      },
      {
       "name": "gm.inheaders",
       "category": "envoy.filters.http"
      },
      {
       "name": "gm.jwtsecurity",
       "category": "envoy.filters.http"
      },
      {
       "name": "gm.listauth",
       "category": "envoy.filters.http"
      },
      {
       "name": "gm.metrics",
       "category": "envoy.filters.http"
      },
      {
       "name": "gm.oauth",
       "category": "envoy.filters.http"
      },
      {
       "name": "gm.obfuscate",
       "category": "envoy.filters.http"
      },
      {
       "name": "gm.observables",
       "category": "envoy.filters.http"
      },
      {
       "name": "gm.oidc-authentication",
       "category": "envoy.filters.http"
      },
      {
       "name": "gm.oidc-validation",
       "category": "envoy.filters.http"
      },
      {
       "name": "istio_authn",
       "category": "envoy.filters.http"
      },
      {
       "name": "jwt-auth",
       "category": "envoy.filters.http"
      },
      {
       "name": "mixer",
       "category": "envoy.filters.http"
      },
      {
       "name": "auto",
       "category": "envoy.thrift_proxy.protocols"
      },
      {
       "name": "binary",
       "category": "envoy.thrift_proxy.protocols"
      },
      {
       "name": "binary/non-strict",
       "category": "envoy.thrift_proxy.protocols"
      },
      {
       "name": "compact",
       "category": "envoy.thrift_proxy.protocols"
      },
      {
       "name": "twitter",
       "category": "envoy.thrift_proxy.protocols"
      },
      {
       "name": "default",
       "category": "envoy.dubbo_proxy.route_matchers"
      },
      {
       "name": "envoy.transport_sockets.alts",
       "category": "envoy.transport_sockets.upstream"
      },
      {
       "name": "envoy.transport_sockets.raw_buffer",
       "category": "envoy.transport_sockets.upstream"
      },
      {
       "name": "envoy.transport_sockets.tap",
       "category": "envoy.transport_sockets.upstream"
      },
      {
       "name": "envoy.transport_sockets.tls",
       "category": "envoy.transport_sockets.upstream"
      },
      {
       "name": "raw_buffer",
       "category": "envoy.transport_sockets.upstream"
      },
      {
       "name": "tls",
       "category": "envoy.transport_sockets.upstream"
      },
      {
       "name": "envoy.client_ssl_auth",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.echo",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.ext_authz",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.dubbo_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.kafka_broker",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.local_ratelimit",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.mysql_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.rbac",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.sni_cluster",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.tcp_cluster_rewrite",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.thrift_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.network.zookeeper_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.http_connection_manager",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.mongo_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.ratelimit",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.redis_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.tcp_proxy",
       "category": "envoy.filters.network"
      },
      {
       "name": "forward_downstream_sni",
       "category": "envoy.filters.network"
      },
      {
       "name": "mixer",
       "category": "envoy.filters.network"
      },
      {
       "name": "sni_verifier",
       "category": "envoy.filters.network"
      },
      {
       "name": "envoy.filters.dubbo.router",
       "category": "envoy.dubbo_proxy.filters"
      },
      {
       "name": "envoy.cluster.eds",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.cluster.logical_dns",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.cluster.original_dst",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.cluster.static",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.cluster.strict_dns",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.clusters.aggregate",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.clusters.dynamic_forward_proxy",
       "category": "envoy.clusters"
      },
      {
       "name": "envoy.clusters.redis",
       "category": "envoy.clusters"
      },
      {
       "name": "raw_udp_listener",
       "category": "envoy.udp_listeners"
      },
      {
       "name": "auto",
       "category": "envoy.thrift_proxy.transports"
      },
      {
       "name": "framed",
       "category": "envoy.thrift_proxy.transports"
      },
      {
       "name": "header",
       "category": "envoy.thrift_proxy.transports"
      },
      {
       "name": "unframed",
       "category": "envoy.thrift_proxy.transports"
      },
      {
       "name": "envoy.dog_statsd",
       "category": "envoy.stats_sinks"
      },
      {
       "name": "envoy.metrics_service",
       "category": "envoy.stats_sinks"
      },
      {
       "name": "envoy.stat_sinks.hystrix",
       "category": "envoy.stats_sinks"
      },
      {
       "name": "envoy.statsd",
       "category": "envoy.stats_sinks"
      },
      {
       "name": "envoy.retry_priorities.previous_priorities",
       "category": "envoy.retry_priorities"
      },
      {
       "name": "envoy.listener.http_inspector",
       "category": "envoy.filters.listener"
      },
      {
       "name": "envoy.listener.original_dst",
       "category": "envoy.filters.listener"
      },
      {
       "name": "envoy.listener.original_src",
       "category": "envoy.filters.listener"
      },
      {
       "name": "envoy.listener.proxy_protocol",
       "category": "envoy.filters.listener"
      },
      {
       "name": "envoy.listener.tls_inspector",
       "category": "envoy.filters.listener"
      },
      {
       "name": "envoy.ip",
       "category": "envoy.resolvers"
      },
      {
       "name": "envoy.resource_monitors.fixed_heap",
       "category": "envoy.resource_monitors"
      },
      {
       "name": "envoy.resource_monitors.injected_resource",
       "category": "envoy.resource_monitors"
      },
      {
       "name": "envoy.filters.udp_listener.udp_proxy",
       "category": "envoy.filters.udp_listener"
      },
      {
       "name": "envoy.file_access_log",
       "category": "envoy.access_loggers"
      },
      {
       "name": "envoy.http_grpc_access_log",
       "category": "envoy.access_loggers"
      },
      {
       "name": "envoy.tcp_grpc_access_log",
       "category": "envoy.access_loggers"
      },
      {
       "name": "envoy.health_checkers.redis",
       "category": "envoy.health_checkers"
      },
      {
       "name": "envoy.transport_sockets.alts",
       "category": "envoy.transport_sockets.downstream"
      },
      {
       "name": "envoy.transport_sockets.raw_buffer",
       "category": "envoy.transport_sockets.downstream"
      },
      {
       "name": "envoy.transport_sockets.tap",
       "category": "envoy.transport_sockets.downstream"
      },
      {
       "name": "envoy.transport_sockets.tls",
       "category": "envoy.transport_sockets.downstream"
      },
      {
       "name": "raw_buffer",
       "category": "envoy.transport_sockets.downstream"
      },
      {
       "name": "tls",
       "category": "envoy.transport_sockets.downstream"
      },
      {
       "name": "envoy.retry_host_predicates.omit_canary_hosts",
       "category": "envoy.retry_host_predicates"
      },
      {
       "name": "envoy.retry_host_predicates.previous_hosts",
       "category": "envoy.retry_host_predicates"
      }
     ]
    },
    "static_resources": {
     "clusters": [
      {
       "name": "xds_cluster",
       "type": "STRICT_DNS",
       "connect_timeout": "0.250s",
       "http2_protocol_options": {},
       "load_assignment": {
        "cluster_name": "xds_cluster",
        "endpoints": [
         {
          "lb_endpoints": [
           {
            "endpoint": {
             "address": {
              "socket_address": {
               "address": "gm-control",
               "port_value": 50000
              }
             }
            }
           }
          ]
         }
        ]
       }
      }
     ]
    },
    "dynamic_resources": {
     "lds_config": {
      "ads": {}
     },
     "cds_config": {
      "ads": {}
     },
     "ads_config": {
      "api_type": "GRPC",
      "grpc_services": [
       {
        "envoy_grpc": {
         "cluster_name": "xds_cluster"
        }
       }
      ]
     }
    },
    "admin": {
     "access_log_path": "/dev/stdout",
     "address": {
      "socket_address": {
       "address": "0.0.0.0",
       "port_value": 8001
      }
     }
    }
   },
   "last_updated": "2020-07-30T14:20:27.155Z"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.ClustersConfigDump",
   "version_info": "xXnuZvHUrbQB8XdZAez4vw==",
   "static_clusters": [
    {
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "xds_cluster",
      "type": "STRICT_DNS",
      "connect_timeout": "0.250s",
      "http2_protocol_options": {},
      "load_assignment": {
       "cluster_name": "xds_cluster",
       "endpoints": [
        {
         "lb_endpoints": [
          {
           "endpoint": {
            "address": {
             "socket_address": {
              "address": "gm-control",
              "port_value": 50000
             }
            }
           }
          }
         ]
        }
       ]
      }
     },
     "last_updated": "2020-07-30T14:20:27.174Z"
    }
   ],
   "dynamic_active_clusters": [
    {
     "version_info": "xXnuZvHUrbQB8XdZAez4vw==",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "catalog",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "api_config_source": {
         "api_type": "GRPC",
         "refresh_delay": "30s",
         "grpc_services": [
          {
           "envoy_grpc": {
            "cluster_name": "xds_cluster"
           }
          }
         ]
        }
       },
       "service_name": "catalog"
      },
      "connect_timeout": "10s",
      "lb_policy": "LEAST_REQUEST"
     },
     "last_updated": "2020-07-30T14:21:06.712Z"
    },
    {
     "version_info": "xXnuZvHUrbQB8XdZAez4vw==",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "dashboard",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "api_config_source": {
         "api_type": "GRPC",
         "refresh_delay": "30s",
         "grpc_services": [
          {
           "envoy_grpc": {
            "cluster_name": "xds_cluster"
           }
          }
         ]
        }
       },
       "service_name": "dashboard"
      },
      "connect_timeout": "10s",
      "lb_policy": "LEAST_REQUEST"
     },
     "last_updated": "2020-07-30T14:21:06.716Z"
    },
    {
     "version_info": "xXnuZvHUrbQB8XdZAez4vw==",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "example",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "api_config_source": {
         "api_type": "GRPC",
         "refresh_delay": "30s",
         "grpc_services": [
          {
           "envoy_grpc": {
            "cluster_name": "xds_cluster"
           }
          }
         ]
        }
       },
       "service_name": "example"
      },
      "connect_timeout": "10s",
      "lb_policy": "LEAST_REQUEST"
     },
     "last_updated": "2020-07-30T14:21:06.694Z"
    },
    {
     "version_info": "xXnuZvHUrbQB8XdZAez4vw==",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "sla",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "api_config_source": {
         "api_type": "GRPC",
         "refresh_delay": "30s",
         "grpc_services": [
          {
           "envoy_grpc": {
            "cluster_name": "xds_cluster"
           }
          }
         ]
        }
       },
       "service_name": "sla"
      },
      "connect_timeout": "10s",
      "lb_policy": "LEAST_REQUEST"
     },
     "last_updated": "2020-07-30T14:21:06.701Z"
    },
    {
     "version_info": "xXnuZvHUrbQB8XdZAez4vw==",
     "cluster": {
      "@type": "type.googleapis.com/envoy.api.v2.Cluster",
      "name": "websockserv",
      "type": "EDS",
      "eds_cluster_config": {
       "eds_config": {
        "api_config_source": {
         "api_type": "GRPC",
         "refresh_delay": "30s",
         "grpc_services": [
          {
           "envoy_grpc": {
            "cluster_name": "xds_cluster"
           }
          }
         ]
        }
       },
       "service_name": "websockserv"
      },
      "connect_timeout": "10s",
      "lb_policy": "LEAST_REQUEST"
     },
     "last_updated": "2020-07-30T14:21:06.707Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.ListenersConfigDump",
   "version_info": "xXnuZvHUrbQB8XdZAez4vw==",
   "dynamic_listeners": [
    {
     "name": "edge:8080",
     "active_state": {
      "version_info": "xXnuZvHUrbQB8XdZAez4vw==",
      "listener": {
       "@type": "type.googleapis.com/envoy.api.v2.Listener",
       "name": "edge:8080",
       "address": {
        "socket_address": {
         "address": "0.0.0.0",
         "port_value": 8080
        }
       },
       "filter_chains": [
        {
         "filters": [
          {
           "name": "envoy.http_connection_manager",
           "typed_config": {
            "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager",
            "stat_prefix": "edge-8080",
            "rds": {
             "config_source": {
              "api_config_source": {
               "api_type": "GRPC",
               "refresh_delay": "30s",
               "grpc_services": [
                {
                 "envoy_grpc": {
                  "cluster_name": "xds_cluster"
                 }
                }
               ]
              }
             },
             "route_config_name": "edge:8080"
            },
            "http_filters": [
             {
              "name": "envoy.cors",
              "typed_config": {
               "@type": "type.googleapis.com/envoy.config.filter.http.cors.v2.Cors"
              }
             },
             {
              "name": "gm.metrics",
              "typed_config": {
               "@type": "type.googleapis.com/deciphernow.gm_proxy.filters.MetricsConfig",
               "metrics_port": 8081,
               "metrics_host": "0.0.0.0",
               "metrics_dashboard_uri_path": "/metrics",
               "metrics_prometheus_uri_path": "/prometheus",
               "prometheus_system_metrics_interval_seconds": 15,
               "metrics_ring_buffer_size": 4096,
               "metrics_key_function": "none"
              }
             },
             {
              "name": "envoy.router",
              "typed_config": {
               "@type": "type.googleapis.com/envoy.config.filter.http.router.v2.Router",
               "upstream_log": [
                {
                 "name": "envoy.http_grpc_access_log",
                 "typed_config": {
                  "@type": "type.googleapis.com/envoy.config.accesslog.v2.HttpGrpcAccessLogConfig",
                  "common_config": {
                   "log_name": "gm.upstream",
                   "grpc_service": {
                    "envoy_grpc": {
                     "cluster_name": "xds_cluster"
                    }
                   }
                  },
                  "additional_request_headers_to_log": [
                   "X-GM-DOMAIN",
                   "X-GM-ROUTE",
                   "X-GM-RULE",
                   "X-GM-SHARED-RULES",
                   "X-GM-CONSTRAINT"
                  ]
                 }
                }
               ]
              }
             }
            ],
            "access_log": [
             {
              "name": "envoy.http_grpc_access_log",
              "typed_config": {
               "@type": "type.googleapis.com/envoy.config.accesslog.v2.HttpGrpcAccessLogConfig",
               "common_config": {
                "log_name": "gm.access",
                "grpc_service": {
                 "envoy_grpc": {
                  "cluster_name": "xds_cluster"
                 }
                }
               },
               "additional_request_headers_to_log": [
                "X-GM-DOMAIN",
                "X-GM-ROUTE",
                "X-GM-RULE",
                "X-GM-SHARED-RULES",
                "X-GM-CONSTRAINT"
               ]
              }
             },
             {
              "name": "envoy.file_access_log",
              "typed_config": {
               "@type": "type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog",
               "path": "/dev/stdout"
              }
             }
            ],
            "use_remote_address": false
           }
          }
         ]
        }
       ]
      },
      "last_updated": "2020-07-30T14:21:06.734Z"
     }
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.ScopedRoutesConfigDump"
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.RoutesConfigDump",
   "dynamic_route_configs": [
    {
     "version_info": "xXnuZvHUrbQB8XdZAez4vw==",
     "route_config": {
      "@type": "type.googleapis.com/envoy.api.v2.RouteConfiguration",
      "name": "edge:8080",
      "virtual_hosts": [
       {
        "name": "*-8080",
        "domains": [
         "*",
         "*:8080"
        ],
        "routes": [
         {
          "match": {
           "prefix": "/services/websockserv/latest/",
           "case_sensitive": false
          },
          "route": {
           "weighted_clusters": {
            "clusters": [
             {
              "name": "websockserv",
              "weight": 1,
              "metadata_match": {},
              "request_headers_to_add": [
               {
                "header": {
                 "key": "x-gm-constraint"
                },
                "append": false
               }
              ]
             }
            ],
            "total_weight": 1
           },
           "prefix_rewrite": "/",
           "timeout": "60s",
           "retry_policy": {
            "num_retries": 2,
            "per_try_timeout": "60s"
           }
          },
          "request_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-websockserv-slash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "websockserv"
            },
            "append": false
           }
          ],
          "response_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-websockserv-slash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "websockserv"
            },
            "append": false
           }
          ]
         },
         {
          "match": {
           "prefix": "/services/websockserv/latest",
           "case_sensitive": false
          },
          "route": {
           "weighted_clusters": {
            "clusters": [
             {
              "name": "websockserv",
              "weight": 1,
              "metadata_match": {},
              "request_headers_to_add": [
               {
                "header": {
                 "key": "x-gm-constraint"
                },
                "append": false
               }
              ]
             }
            ],
            "total_weight": 1
           },
           "prefix_rewrite": "/",
           "timeout": "60s",
           "retry_policy": {
            "num_retries": 2,
            "per_try_timeout": "60s"
           }
          },
          "request_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-websockserv-noslash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "websockserv"
            },
            "append": false
           }
          ],
          "response_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-websockserv-noslash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "websockserv"
            },
            "append": false
           }
          ]
         },
         {
          "match": {
           "prefix": "/services/sla/0.2/",
           "case_sensitive": false
          },
          "route": {
           "weighted_clusters": {
            "clusters": [
             {
              "name": "sla",
              "weight": 1,
              "metadata_match": {},
              "request_headers_to_add": [
               {
                "header": {
                 "key": "x-gm-constraint"
                },
                "append": false
               }
              ]
             }
            ],
            "total_weight": 1
           },
           "prefix_rewrite": "/",
           "timeout": "60s",
           "retry_policy": {
            "num_retries": 2,
            "per_try_timeout": "60s"
           }
          },
          "request_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-sla-slash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "sla"
            },
            "append": false
           }
          ],
          "response_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-sla-slash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "sla"
            },
            "append": false
           }
          ]
         },
         {
          "match": {
           "prefix": "/services/sla/0.2",
           "case_sensitive": false
          },
          "route": {
           "weighted_clusters": {
            "clusters": [
             {
              "name": "sla",
              "weight": 1,
              "metadata_match": {},
              "request_headers_to_add": [
               {
                "header": {
                 "key": "x-gm-constraint"
                },
                "append": false
               }
              ]
             }
            ],
            "total_weight": 1
           },
           "prefix_rewrite": "/",
           "timeout": "60s",
           "retry_policy": {
            "num_retries": 2,
            "per_try_timeout": "60s"
           }
          },
          "request_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-sla-noslash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "sla"
            },
            "append": false
           }
          ],
          "response_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-sla-noslash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "sla"
            },
            "append": false
           }
          ]
         },
         {
          "match": {
           "prefix": "/services/example/0.4/",
           "case_sensitive": false
          },
          "route": {
           "weighted_clusters": {
            "clusters": [
             {
              "name": "example",
              "weight": 1,
              "metadata_match": {},
              "request_headers_to_add": [
               {
                "header": {
                 "key": "x-gm-constraint"
                },
                "append": false
               }
              ]
             }
            ],
            "total_weight": 1
           },
           "prefix_rewrite": "/",
           "timeout": "60s",
           "retry_policy": {
            "num_retries": 2,
            "per_try_timeout": "60s"
           }
          },
          "request_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-example-slash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "example"
            },
            "append": false
           }
          ],
          "response_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-example-slash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "example"
            },
            "append": false
           }
          ]
         },
         {
          "match": {
           "prefix": "/services/example/0.4",
           "case_sensitive": false
          },
          "route": {
           "weighted_clusters": {
            "clusters": [
             {
              "name": "example",
              "weight": 1,
              "metadata_match": {},
              "request_headers_to_add": [
               {
                "header": {
                 "key": "x-gm-constraint"
                },
                "append": false
               }
              ]
             }
            ],
            "total_weight": 1
           },
           "prefix_rewrite": "/",
           "timeout": "60s",
           "retry_policy": {
            "num_retries": 2,
            "per_try_timeout": "60s"
           }
          },
          "request_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-example-noslash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "example"
            },
            "append": false
           }
          ],
          "response_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-example-noslash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "example"
            },
            "append": false
           }
          ]
         },
         {
          "match": {
           "prefix": "/services/dashboard/latest/",
           "case_sensitive": false
          },
          "route": {
           "weighted_clusters": {
            "clusters": [
             {
              "name": "dashboard",
              "weight": 1,
              "metadata_match": {},
              "request_headers_to_add": [
               {
                "header": {
                 "key": "x-gm-constraint"
                },
                "append": false
               }
              ]
             }
            ],
            "total_weight": 1
           },
           "prefix_rewrite": "/",
           "timeout": "60s",
           "retry_policy": {
            "num_retries": 2,
            "per_try_timeout": "60s"
           }
          },
          "request_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-dashboard-slash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "dashboard"
            },
            "append": false
           }
          ],
          "response_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-dashboard-slash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "dashboard"
            },
            "append": false
           }
          ]
         },
         {
          "match": {
           "prefix": "/services/dashboard/latest",
           "case_sensitive": false
          },
          "route": {
           "weighted_clusters": {
            "clusters": [
             {
              "name": "dashboard",
              "weight": 1,
              "metadata_match": {},
              "request_headers_to_add": [
               {
                "header": {
                 "key": "x-gm-constraint"
                },
                "append": false
               }
              ]
             }
            ],
            "total_weight": 1
           },
           "prefix_rewrite": "/",
           "timeout": "60s",
           "retry_policy": {
            "num_retries": 2,
            "per_try_timeout": "60s"
           }
          },
          "request_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-dashboard-noslash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "dashboard"
            },
            "append": false
           }
          ],
          "response_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-dashboard-noslash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "dashboard"
            },
            "append": false
           }
          ]
         },
         {
          "match": {
           "prefix": "/services/catalog/0.4/",
           "case_sensitive": false
          },
          "route": {
           "weighted_clusters": {
            "clusters": [
             {
              "name": "catalog",
              "weight": 1,
              "metadata_match": {},
              "request_headers_to_add": [
               {
                "header": {
                 "key": "x-gm-constraint"
                },
                "append": false
               }
              ]
             }
            ],
            "total_weight": 1
           },
           "prefix_rewrite": "/",
           "timeout": "60s",
           "retry_policy": {
            "num_retries": 2,
            "per_try_timeout": "60s"
           }
          },
          "request_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-catalog-slash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "catalog"
            },
            "append": false
           }
          ],
          "response_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-catalog-slash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "catalog"
            },
            "append": false
           }
          ]
         },
         {
          "match": {
           "prefix": "/services/catalog/0.4",
           "case_sensitive": false
          },
          "route": {
           "weighted_clusters": {
            "clusters": [
             {
              "name": "catalog",
              "weight": 1,
              "metadata_match": {},
              "request_headers_to_add": [
               {
                "header": {
                 "key": "x-gm-constraint"
                },
                "append": false
               }
              ]
             }
            ],
            "total_weight": 1
           },
           "prefix_rewrite": "/",
           "timeout": "60s",
           "retry_policy": {
            "num_retries": 2,
            "per_try_timeout": "60s"
           }
          },
          "request_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-catalog-noslash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "catalog"
            },
            "append": false
           }
          ],
          "response_headers_to_add": [
           {
            "header": {
             "key": "x-gm-route",
             "value": "route-catalog-noslash"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-rule",
             "value": "DEFAULT"
            },
            "append": false
           },
           {
            "header": {
             "key": "x-gm-shared-rules",
             "value": "catalog"
            },
            "append": false
           }
          ]
         }
        ],
        "request_headers_to_add": [
         {
          "header": {
           "key": "x-gm-domain",
           "value": "*:8080"
          },
          "append": false
         }
        ]
       }
      ]
     },
     "last_updated": "2020-07-30T14:21:06.752Z"
    }
   ]
  },
  {
   "@type": "type.googleapis.com/envoy.admin.v3.SecretsConfigDump"
  }
 ]
}
